--- a/Escuela/Views/Login/RecuperarPassword.cshtml
+++ b/Escuela/Views/Login/RecuperarPassword.cshtml
@@ -17,7 +17,7 @@
                             <h2 class="text-center">Recuperar password</h2>
                             <p>Debes ingresar tu email para recuperar tu password. Si no encuentras el correo en tu bandeja de entrada, revisa tu bandeja de span</p>
                             <div class="panel-body">
-                                <form class="form" action="@Url.Action("ResetarPassword","Login")">
+                                <form class="form" action="">
                                     <fieldset>
                                         <div class="center-block form-group">
                                             <div class="input-group text-center">
