--- a/Escuela/Views/Login/RecuperarPassword.cshtml
+++ b/Escuela/Views/Login/RecuperarPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "RecuperarPassword";
+    ViewBag.Title = "Recuperar Clave";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -17,20 +17,21 @@
                             <h2 class="text-center">Recuperar password</h2>
                             <p>Debes ingresar tu email para recuperar tu password. Si no encuentras el correo en tu bandeja de entrada, revisa tu bandeja de span</p>
                             <div class="panel-body">
-                                <form class="form" action="">
+                                <form class="form" action="@Url.Action("ResetearPassword","Login")" method="POST" id="formRecuperarPassword">
                                     <fieldset>
                                         <div class="center-block form-group">
                                             <div class="input-group text-center">
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                                                <input id="emailInput" name="user.Email" placeholder="Email" class="form-control" type="email" 
-                                                       oninvalid="setCustomValidity('Por favor ingrese un email valido!')" 
-                                                       onchange="try{setCustomValidity('')}catch(e){}" 
+                                                <input id="emailInput" name="user.Email" placeholder="Email" class="form-control" type="email"
+                                                       oninvalid="setCustomValidity('Por favor ingrese un email valido!')"
+                                                       onchange="try{setCustomValidity('')}catch(e){}"
                                                        required autofocus>
                                             </div>
                                         </div>
                                         <div class="center-block form-group">
                                             <input class="btn btn-lg btn-primary " value="Recuperar clave" type="submit">
                                         </div>
+                                        @Html.ValidationMessage("validacionEmail", new { @class = "label label-danger", id = "validacionEmail" })
                                     </fieldset>
                                 </form>
                             </div>
@@ -41,3 +42,31 @@
         </div>
     </div>
 </div>
+
+@section scripts {
+
+    <script>
+
+        $(function () {
+            e.preventDefault();
+            $("#formRecuperarPassword").submit(function () {
+                var form = $(this);
+                if (form.validate()) {
+                    form.ajaxSubmit({
+                        dataType: 'JSON',
+                        type: 'POST',
+                        url: form.attr('action'),
+                        success: function (r) {
+                            if (r.respuesta) {
+                                window.location.href = r.redirect;
+                            } else {
+                                $('#validacionEmail').text(r.error).show();
+                            }
+                        }
+                    });
+                }
+            });
+        });
+
+    </script>
+}
