fin validacion recuperar email con ajax

--- a/Escuela/Views/Login/RecuperarPassword.cshtml
+++ b/Escuela/Views/Login/RecuperarPassword.cshtml
@@ -4,6 +4,35 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@section scripts {
+
+    <script type="text/javascript">
+
+        $(function () {
+            $('#btnEnviar').on('click',function (e) {
+                e.preventDefault();
+                $.ajax({
+                    type: 'POST',
+                    dataType : 'json',
+                    data: { 'email': $('#emailInput').val() },
+                    url: "@Url.Action("ResetearPassword", "Login")",
+                    success: function (result) {
+                        if (result.respuesta == false) {
+                            $('#validacionEmail').html(result.error);
+                        } else {
+                            $(location).attr('href', "@Url.Action("PasswordReseteada", "Login")");
+                        }
+                    },
+                    error: function (result) {
+                        alert('ocurrio un error' + result2);
+                    }
+                });
+            });
+        });
+
+    </script>
+}
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <div style="padding-top: 70px"></div>
 <div class="container">
@@ -17,21 +46,21 @@
                             <h2 class="text-center">Recuperar password</h2>
                             <p>Debes ingresar tu email para recuperar tu password. Si no encuentras el correo en tu bandeja de entrada, revisa tu bandeja de span</p>
                             <div class="panel-body">
-                                <form class="form" action="@Url.Action("ResetearPassword","Login")" method="POST" id="formRecuperarPassword">
+                                <form class="form" method="POST" id="formRecuperarPassword">
                                     <fieldset>
                                         <div class="center-block form-group">
                                             <div class="input-group text-center">
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                                                <input id="emailInput" name="user.Email" placeholder="Email" class="form-control" type="email"
+                                                <input id="emailInput" placeholder="Email" class="form-control" type="email"
                                                        oninvalid="setCustomValidity('Por favor ingrese un email valido!')"
                                                        onchange="try{setCustomValidity('')}catch(e){}"
                                                        required autofocus>
                                             </div>
+                                            @Html.ValidationMessage("validacionEmail", new { @class = "label label-danger", id = "validacionEmail" })
                                         </div>
                                         <div class="center-block form-group">
-                                            <input class="btn btn-lg btn-primary " value="Recuperar clave" type="submit">
+                                            <input class="btn btn-lg btn-primary " value="Recuperar clave" type="submit" id="btnEnviar">
                                         </div>
-                                        @Html.ValidationMessage("validacionEmail", new { @class = "label label-danger", id = "validacionEmail" })
                                     </fieldset>
                                 </form>
                             </div>
@@ -42,31 +71,3 @@
         </div>
     </div>
 </div>
-
-@section scripts {
-
-    <script>
-
-        $(function () {
-            e.preventDefault();
-            $("#formRecuperarPassword").submit(function () {
-                var form = $(this);
-                if (form.validate()) {
-                    form.ajaxSubmit({
-                        dataType: 'JSON',
-                        type: 'POST',
-                        url: form.attr('action'),
-                        success: function (r) {
-                            if (r.respuesta) {
-                                window.location.href = r.redirect;
-                            } else {
-                                $('#validacionEmail').text(r.error).show();
-                            }
-                        }
-                    });
-                }
-            });
-        });
-
-    </script>
-}
