--- a/Escuela/Views/Login/PasswordReseteada.cshtml
+++ b/Escuela/Views/Login/PasswordReseteada.cshtml
@@ -4,5 +4,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Se envio la clave al email ingresado, por favor revise</h2>
-
+<h2>Revise su email para recuperar su clave</h2>
+<br />
+<a href="@Url.Action("Index","Login")">Ir a inicio de sesion</a>
