agregar imagen al cargar reset password

--- a/Escuela/Views/Login/RecuperarPassword.cshtml
+++ b/Escuela/Views/Login/RecuperarPassword.cshtml
@@ -4,35 +4,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@section scripts {
-
-    <script type="text/javascript">
-
-        $(function () {
-            $('#btnEnviar').on('click',function (e) {
-                e.preventDefault();
-                $.ajax({
-                    type: 'POST',
-                    dataType : 'json',
-                    data: { 'email': $('#emailInput').val() },
-                    url: "@Url.Action("ResetearPassword", "Login")",
-                    success: function (result) {
-                        if (result.respuesta == false) {
-                            $('#validacionEmail').html(result.error);
-                        } else {
-                            $(location).attr('href', "@Url.Action("PasswordReseteada", "Login")");
-                        }
-                    },
-                    error: function (result) {
-                        alert('ocurrio un error' + result2);
-                    }
-                });
-            });
-        });
-
-    </script>
-}
-
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <div style="padding-top: 70px"></div>
 <div class="container">
@@ -53,11 +24,11 @@
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
                                                 <input id="emailInput" placeholder="Email" class="form-control" type="email"
                                                        oninvalid="setCustomValidity('Por favor ingrese un email valido!')"
-                                                       onchange="try{setCustomValidity('')}catch(e){}"
                                                        required autofocus>
                                             </div>
                                             @Html.ValidationMessage("validacionEmail", new { @class = "label label-danger", id = "validacionEmail" })
                                         </div>
+                                        <img src="~/Content/Images/cargando.gif" id="cargando" width="100" height="100" style="display:none" />
                                         <div class="center-block form-group">
                                             <input class="btn btn-lg btn-primary " value="Recuperar clave" type="submit" id="btnEnviar">
                                         </div>
@@ -71,3 +42,48 @@
         </div>
     </div>
 </div>
+
+@section scripts {
+
+    <script type="text/javascript">
+
+        $(function () {
+
+            $('#btnEnviar').on('click',function (e) {
+                e.preventDefault();
+                $.ajax({
+                    type: 'POST',
+                    dataType : 'json',
+                    data: { 'email': $('#emailInput').val() },
+                    url: "@Url.Action("ResetearPassword", "Login")",
+                    success: function (result) {
+                        if (result.respuesta == false) {
+                            $('#validacionEmail').show();
+                            $('#validacionEmail').html(result.error);
+                        } else {
+                            $(location).attr('href', "@Url.Action("PasswordReseteada", "Login")");
+                        }
+                    },
+                    error: function (result) {
+                        alert('ocurrio un error' + result2);
+                    },
+                    beforeSend: function (objeto) {
+                        $('#validacionEmail').hide();
+                        $('#cargando').css({ display: 'inline-flex' });
+                        $('#btnEnviar').prop('disabled', true);
+                    },
+                    complete: function () {
+                        $('#cargando').css('display', 'none');
+                        $('#btnEnviar').prop('disabled', false);
+                    }
+                });
+            });
+
+            $('#emailInput').on('input',function (e) {
+                $('#validacionEmail').hide();
+            });
+
+        });
+
+    </script>
+}
