arreglos en el mall

--- a/Escuela/Views/Login/RecuperarPassword.cshtml
+++ b/Escuela/Views/Login/RecuperarPassword.cshtml
@@ -65,9 +65,9 @@
                         }
                     },
                     error: function (result) {
-                        alert('ocurrio un error' + result2);
+                        alert('ocurrio un error' + result);
                     },
-                    beforeSend: function (objeto) {
+                    beforeSend: function () {
                         $('#validacionEmail').hide();
                         $('#cargando').css({ display: 'inline-flex' });
                         $('#btnEnviar').prop('disabled', true);
